--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
             <h2 class="section-title">Kenangan Manis Kita 📸💕</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="images/foto1.jpg" alt="Foto romantis 1">
+                    <img src="images/Foto1.jpg" alt="Foto romantis 1">
                     <p class="caption">Pertama kali jalan berdua~ 😳</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/foto2.jpg" alt="Foto romantis 2">
+                    <img src="images/Foto2.jpg" alt="Foto romantis 2">
                     <p class="caption">Makan Ular Di Depan Rumah 🐍</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/foto3.jpg" alt="Foto romantis 3">
+                    <img src="images/Foto3.jpg" alt="Foto romantis 3">
                     <p class="caption">Acara Event Cosplay Anomali >.<</p>
                 </div>
                  <div class="gallery-item">
-                    <img src="images/foto4.jpg" alt="Foto romantis 4">
+                    <img src="images/Foto4.jpg" alt="Foto romantis 4">
                     <p class="caption">Ini Foto Anak Orang ❤️</p>
                 </div>
                  <div class="gallery-item">
-                    <img src="images/foto5.jpg" alt="Foto romantis 5">
+                    <img src="images/Foto5.jpg" alt="Foto romantis 5">
                     <p class="caption">Nikahan Kita yang Romantis wkwk</p>
                 </div>
                  <div class="gallery-item">
-                    <img src="images/foto6.jpg" alt="Foto romantis 6">
+                    <img src="images/Foto6.jpg" alt="Foto romantis 6">
                     <p class="caption">Sayang kamu selamanyaaa...</p>
                 </div>
             </div>
