--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+<button onclick="document.getElementById('bucinMusic').play()">💖 Mainkan Musik Cinta</button>
 
-    <audio controls autoplay loop hidden>
-        <source src="music/nama_lagu.mp3" type="audio/mpeg">
-        Browser kamu tidak mendukung pemutar audio.
-    </audio>
-
+<audio id="bucinMusic" loop>
+  <source src="Romantic-Day-chosic.com_.mp3" type="audio/mpeg">
+  Browser kamu tidak mendukung pemutar audio.
+</audio>
     <canvas id="falling-hearts-canvas"></canvas>
 
     <header class="main-header">
